fix: horrible list-detail layout bug (#116)

--- a/src/kayenta/canary.less
+++ b/src/kayenta/canary.less
@@ -13,12 +13,17 @@
     position: inherit;
   }
 
+  .list-detail {
+    > .col-md-2, .col-md-10 {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+
   .config-list {
-    position: fixed;
     ul {
       max-height: calc(~"70vh - 44px"); // i.e., minus the footer.
       overflow: auto;
-      width: 260px;
     }
   }
 
